dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/notfound/type/array.alg
algoritmo "erro tipo nao existe"

var
    x: vetor[1..1] de inexistente
inicio

fimalgoritmo
